--- a/_1_Remoting_and_web_services_using_Spring/II_Using_Hessian_to_remotely_call_services_via_HTTP/src/main/webapp/WEB-INF/web.xml
+++ b/_1_Remoting_and_web_services_using_Spring/II_Using_Hessian_to_remotely_call_services_via_HTTP/src/main/webapp/WEB-INF/web.xml
@@ -23,14 +23,16 @@
     <url-pattern>/remoting/*</url-pattern>
   </servlet-mapping>
 
-  <servlet>
-    <servlet-name>accountExporter</servlet-name>
-    <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
-  </servlet>
+  <!-- 方式2 start 取消注释生效 -->
+  <!--<servlet>-->
+    <!--<servlet-name>accountExporter</servlet-name>-->
+    <!--<servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>-->
+  <!--</servlet>-->
 
-  <servlet-mapping>
-    <servlet-name>accountExporter</servlet-name>
-    <url-pattern>/remoting/AccountService</url-pattern>
-  </servlet-mapping>
+  <!--<servlet-mapping>-->
+    <!--<servlet-name>accountExporter</servlet-name>-->
+    <!--<url-pattern>/remoting/AccountService</url-pattern>-->
+  <!--</servlet-mapping>-->
+  <!-- 方式2 end -->
 
 </web-app>
