--- a/_1_Remoting_and_web_services_using_Spring/II_Using_Hessian_to_remotely_call_services_via_HTTP_Client/src/main/webapp/WEB-INF/web.xml
+++ b/_1_Remoting_and_web_services_using_Spring/II_Using_Hessian_to_remotely_call_services_via_HTTP_Client/src/main/webapp/WEB-INF/web.xml
@@ -13,24 +13,14 @@
   </listener>
 
   <servlet>
-    <servlet-name>remoting</servlet-name>
+    <servlet-name>client</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>remoting</servlet-name>
-    <url-pattern>/remoting/*</url-pattern>
-  </servlet-mapping>
-
-  <servlet>
-    <servlet-name>accountExporter</servlet-name>
-    <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
-  </servlet>
-
-  <servlet-mapping>
-    <servlet-name>accountExporter</servlet-name>
-    <url-pattern>/remoting/AccountService</url-pattern>
+    <servlet-name>client</servlet-name>
+    <url-pattern>/*</url-pattern>
   </servlet-mapping>
 
 </web-app>
